[package]
name = "numeric"
version = "0.1.0"
authors = ["Gustav Larsson <gustav.m.larsson@gmail.com>"]
description = "N-dimensional matrix class for Rust"
repository = "https://github.com/numeric-rust/numeric"
documentation = "http://numeric.rs/doc/numeric/index.html"
readme = "README.md"
keywords = ["numeric", "tensor", "matrix", "vector", "hdf5"]
license = "MIT"
edition = "2021"

[dependencies]
num = "0.4.0"
rand = "0.8.5"

[[test]]
name = "numeric"
path = "tests/lib.rs"
